--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/mistral": "^1.2.8",
     "@ai-sdk/openai": "^1.3.22",
     "@prisma/client": "^6.10.1",
     "@radix-ui/react-label": "^2.1.7",
